# fdb-proto-layer

./: Cargo.toml  LICENSE  README.md  build.rs  fdb.proto  protos.proto  schema.json
client/: Cargo.toml  build.rs
client/examples/02-proto/: Cargo.toml  build.rs
client/examples/02-proto/src/: main.rs
client/examples/example/: Cargo.toml
client/examples/example/src/: main.rs
client/src/: client.rs
src/: main.rs  pb.rs  schema.rs
