[package]
name = "fdb-proto-layer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
tokio = {version = "1.4.0", features = ["full"] }
log = "0.4.14"
tracing = { version = "0.1" }
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.2", features = ["tracing-log"] }
tonic = "0.4"
prost = "0.7.0"
prost-types = "0.7.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
prometheus = { version = "0.13.0", features = ["process"] }
lazy_static = "1.4.0"
foundationdb = "0.5"
futures = "0.3"
async-stream = "0.3.2"
protofish = "0.5.2"
bytes = "1"

[build-dependencies]
tonic-build = "0.4"