[package]
name = "fdb-proto-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.4"
prost = "0.7.0"
prost-types = "0.7.0"
tracing = { version = "0.1" }
futures = "0.3"
async-stream = "0.3.2"

[build-dependencies]
tonic-build = "0.4"