[package]
name = "example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fdb-proto-client = { path = "../../" }
tokio = {version = "1.4.0", features = ["full"] }
tonic = "0.4"
prost = "0.7.0"

[build-dependencies]
tonic-build = "0.4"